[package]
name = "markov-rs"
version = "0.1.0"
authors = ["Jake Stanger <mail@jstanger.dev>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "markov_rs"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
markov = "1.0.3"